# Rat-Trap-Next-Gen-Compression-Engine

./: README.md  Rat-Trap 2.0  Rat-Trap 2.0 benchmarking single code  Rat-Trap 3.0 core functionality with disk indexing  Rat-Trap 4.0  Rat-Trap 4.1  Rat-Trap 4.2  Rat-Trap License  Rat-Trap version 3.0 represents a significant advancement in the realm of spatial data management  Rat-Trap1.0  The Geometric Motion Wrapper (GMW): A  Shift in Data Compression Driven by Motion–TimeSpace Physics  benchmark the compression ratio and time for both methods.  benchmarking 2.0 full run  pyproject.toml
rat_trap/: GMW Tool GUI - Complete graphical interface for all GMW archive operations.  GMW Tool v4: SQLite-backed content lake for LLM ingestion.  GUI_README.md  __init__.py  cli.py  gmw_gui_complete.py  gmw_tool.py  gmw_tool_v4.py  run_complete_gui.ba
