[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rat-trap"
version = "4.2.0"
description = "SQLite-backed content lake compression engine"
readme = "README.md"
license = { file = "Rat-Trap License" }
authors = [
    { name = "Glyn Evans" },
    { name = "Martin Ollett" }
]
keywords = ["compression", "sqlite", "zstandard", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Topic :: System :: Archiving :: Compression",
    "Intended Audience :: Developers"
]
requires-python = ">=3.9"
dependencies = [
    "zstandard>=0.21.0",
]

[project.optional-dependencies]
crypto = ["cryptography>=41.0.0", "xxhash>=3.0.0"]

[project.scripts]
rat-trap = "rat_trap.cli:main"

[tool.setuptools]
packages = ["rat_trap"]
include-package-data = true
